made some changes

--- a/CODE_dizzys/refreshDIZZYS_2015_10_23/dizzyslan4/dizzysNewInfec/inst/doc/dizzysNewInfec.Rnw
+++ b/CODE_dizzys/refreshDIZZYS_2015_10_23/dizzyslan4/dizzysNewInfec/inst/doc/dizzysNewInfec.Rnw
@@ -19,9 +19,9 @@
 \usepackage{Sweave} 
 
 \newtheorem{thm}{\protect\theoremname}
-\theoremstyle{definition}
+%\theoremstyle{definition}
 \newtheorem{defn}[thm]{\protect\definitionname}
-\theoremstyle{plain}
+%\theoremstyle{plain}
 \newtheorem{prop}[thm]{\protect\propositionname}
 \newtheorem{definition}{Definition}[chapter]
 \newtheorem{proposition}{Proposition}[chapter]
