--- a/Manuscrist/Manuscrit/bibManuscrit.bib
+++ b/Manuscrist/Manuscrit/bibManuscrit.bib
@@ -101,7 +101,7 @@
   File                     = {:/home/tran/Documents/Giang_Document/These/thesegiang/Book/1957 Bailey The Mathematical theory of epidemics.pdf:PDF}
 }
 
-@Article{bartlett1960critical,
+@Article{Bartlett1960,
   Title                    = {The critical community size for measles in the United States},
   Author                   = {M. S. Bartlett},
   Journal                  = {Journal of the Royal Statistical Society. Series A (General)},
@@ -112,7 +112,7 @@
   Publisher                = {JSTOR}
 }
 
-@Article{bartlett1960critical,
+@Article{Bartlett1960a,
   Title                    = {The critical community size for measles in the United States},
   Author                   = {M. S. Bartlett},
   Journal                  = {Journal of the Royal Statistical Society. Series A (General)},
@@ -591,7 +591,7 @@
   Timestamp                = {2014.04.22}
 }
 
-@Book{Hanski2004,
+@Book{Gaggiotti2004,
   Title                    = {Ecology, Genetics and evolution of metapopulations},
   Author                   = {Ilkka Hanski; Oscar E Gaggiotti},
   Year                     = {2004},
@@ -601,7 +601,7 @@
   Timestamp                = {2014.04.22}
 }
 
-@Book{Hanski2004,
+@Book{Gaggiotti2004a,
   Title                    = {Ecology, Genetics and evolution of metapopulations},
   Author                   = {Ilkka Hanski; Oscar E Gaggiotti},
   Year                     = {2004},
@@ -1459,7 +1459,7 @@
   Publisher                = {AIP Publishing}
 }
 
-@Book{renshaw1993modelling,
+@Book{Renshaw1993,
   Title                    = {Modelling biological populations in space and time},
   Author                   = {E. Renshaw},
   Publisher                = {Cambridge University Press},
@@ -1467,7 +1467,7 @@
   Volume                   = {11}
 }
 
-@Book{renshaw1993modelling,
+@Book{Renshaw1993a,
   Title                    = {Modelling biological populations in space and time},
   Author                   = {E. Renshaw},
   Publisher                = {Cambridge University Press},
